fix ui on smaller screen

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
-  flex-wrap: wrap;
   align-items: center;
   align-content: center;
 
@@ -17,7 +16,7 @@
 .take-input {
   display: flex;
   justify-content: center;
-  padding: 3.2%;
+  margin-top: 2%;
 }
 
 .input-field {
@@ -27,16 +26,18 @@
   border-radius: 4px;
   border: 0px;
   outline: none;
-  padding: 5% 18%;
+  margin: 2% 8%;
+  margin-left: 2%;
   line-height: 10px;
 }
 
 .input-div {
-  margin-right: 90px;
+  margin-left: 0.5%;
 }
 
 .button-div {
-  margin-left: 2%;
+  margin-top: 1.5%;
+  margin-left: 10%;
 }
 
 .show-data {
@@ -55,7 +56,7 @@
 	font-weight:bold;
 	text-decoration:none;
 	text-shadow:0px 0.2px 0px #3d768a;
-  padding: 25% 30%;
+  padding: 9% 8%;
 }
 .search-btn:hover {
 	background-color: #878f99;
